--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMRP9G9cTmnpQGSGZNm0sCD",
+      "authorship_tag": "ABX9TyMv4F0as4t05eFZNMBGaVu1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "_gF3OazUhJzL",
         "colab_type": "code",
-        "outputId": "ff8bd2c2-ab0d-416c-f39e-5a9c7cad74e6",
+        "outputId": "d2cfb1a9-67e8-4394-bc47-bf4c0b54fd32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
@@ -668,7 +668,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,11 +764,7 @@
       "metadata": {
         "id": "AgiudKuammoJ",
         "colab_type": "code",
-        "outputId": "52c2b4d0-a0b2-40ec-b491-0246bae803b4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 271
-        }
+        "colab": {}
       },
       "source": [
         "\n",
@@ -795,9 +791,11 @@
         "\n",
         "\n",
         "table_cls_2 = soup.find(id='octable')\n",
+        "#print(table_cls_2)\n",
         "all_trs = table_cls_2.find_all('tr')\n",
+        "#print(all_trs)\n",
         "req_rows = table_cls_2.find_all('tr')\n",
-        "\n",
+        "#print(req_rows)\n",
         "new_table = pd.DataFrame(index=range(0, len(req_rows)-3), columns=col_list_fnl)\n",
         "\n",
         "row_marker = 0\n",
@@ -810,7 +808,8 @@
         "  select_cols = td_columns[1:22]\n",
         "  cols_h = range(0, len(select_cols))\n",
         "\n",
-        "  for nu, cols_h in enumerate(select_cols):\n",
+        "  for nu, column in enumerate(select_cols):\n",
+        "    #print(nu)\n",
         "    utf_string = column.get_text().strip('\\n\\r\\t\": ')\n",
         "    b_utf_string = bytes(utf_string, encoding = 'utf-8')\n",
         "    tr = utf_string.replace(',', '')\n",
@@ -818,28 +817,148 @@
         "    new_table.iloc[row_number:nu] = tr\n",
         "\n",
         "  row_marker += 1\n",
-        "print (new_table)\n",
+        "#print (new_table)\n",
         "    "
       ],
-      "execution_count": 56,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UfKTzPGsicBM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "942902da-200b-402b-c569-0bfa098a9fb6"
+      },
+      "source": [
+        "table_cls_2 = soup.find(id=\"octable\")\n",
+        "req_row = table_cls_2.find_all('tr')\n",
+        "col=3\n",
+        "strike_price_list = []\n",
+        "calloi_list=[]\n",
+        "putoi_list=[]\n",
+        "for row_number, tr_nos in enumerate(req_row):\n",
+        "  # This ensures that we use only the rows with values\n",
+        "  if row_number <= 1 or row_number == len(req_row) - 1:\n",
+        "    continue\n",
+        "\n",
+        "  td_columns = tr_nos.find_all('td')\n",
+        "  strike_price = int(float(BeautifulSoup(str(td_columns[11]), 'html.parser').get_text()))\n",
+        "  calloi = int(float(BeautifulSoup((str(td_columns[1]).replace('-','0').replace(',', '')), 'html.parser').get_text()))\n",
+        "  putoi = int(float(BeautifulSoup((str(td_columns[21]).replace('-','0').replace(',', '')), 'html.parser').get_text()))\n",
+        "  strike_price_list.append(strike_price)\n",
+        "  calloi_list.append(calloi)\n",
+        "  putoi_list.append(putoi)\n",
+        "  #print(str(td_columns[1]).replace(',', ''))\n",
+        "\n",
+        "df = pd.DataFrame(list(zip(strike_price_list,calloi_list,putoi_list)),columns=['strik','calloi','putoi'])\n",
+        "df.head()\n",
+        "  "
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>strik</th>\n",
+              "      <th>calloi</th>\n",
+              "      <th>putoi</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>10350</td>\n",
+              "      <td>150</td>\n",
+              "      <td>18150</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>10400</td>\n",
+              "      <td>0</td>\n",
+              "      <td>32625</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>10450</td>\n",
+              "      <td>0</td>\n",
+              "      <td>975</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>10500</td>\n",
+              "      <td>150</td>\n",
+              "      <td>105075</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>10550</td>\n",
+              "      <td>0</td>\n",
+              "      <td>75</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   strik  calloi   putoi\n",
+              "0  10350     150   18150\n",
+              "1  10400       0   32625\n",
+              "2  10450       0     975\n",
+              "3  10500     150  105075\n",
+              "4  10550       0      75"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gfSMHXeki1UT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "c5a130ba-61f1-4355-844d-caee87e3d716"
+      },
+      "source": [
+        "print(calloi_list)"
+      ],
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "   b'CALLS' b'\\xc2\\xa0' b'PUTS' b'Chart'  ... b'Volume' b'Chng in OI' b'OI' b'Chart'\n",
-            "0       NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
-            "1       NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
-            "2      9450        9450    9450     9450  ...      9450          9450  9450     9450\n",
-            "3      9450        9450    9450     9450  ...      9450          9450  9450     9450\n",
-            "4      9450        9450    9450     9450  ...      9450          9450  9450     9450\n",
-            "..      ...         ...     ...      ...  ...       ...           ...   ...      ...\n",
-            "66      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
-            "67      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
-            "68      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
-            "69      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
-            "70      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
-            "\n",
-            "[71 rows x 26 columns]\n"
+            "[150, 0, 0, 150, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2700, 0, 0, 0, 18000, 0, 1875, 375, 26850, 525, 53175, 19050, 276975, 123000, 945300, 211575, 1414275, 311700, 1693800, 410025, 3118050, 656775, 2828550, 655275, 3169875, 530775, 2387475, 305550, 1669500, 184275, 2858100, 97425, 629625, 48075, 592875, 4050, 558750, 0, 385800, 1800, 2136075, 0, 111450, 675, 101700, 0, 11550, 0, 120075, 0, 345000, 225, 106800, 3000, 5325, 3600, 9450, 63675]\n"
           ],
           "name": "stdout"
         }
