--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMv4F0as4t05eFZNMBGaVu1",
+      "authorship_tag": "ABX9TyM84naP0UHusagWwib3+yeM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "_gF3OazUhJzL",
         "colab_type": "code",
-        "outputId": "d2cfb1a9-67e8-4394-bc47-bf4c0b54fd32",
+        "outputId": "b75ed881-ed72-4dcf-f15e-1e33dd6bed01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
@@ -688,26 +688,13 @@
       "metadata": {
         "id": "sxD4RxpxiTDZ",
         "colab_type": "code",
-        "outputId": "e0e22e35-083b-4bed-ffe8-914c2f984fb4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
+        "colab": {}
       },
       "source": [
-        "!ls \"/content/drive/My Drive/Colab Notebooks/NSE_Site_Option_Chain_Page/\""
+        "!cd \"/content/drive/My Drive/Colab Notebooks/NSE_Site_Option_Chain_Page/\""
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "'NSE - National Stock Exchange of India Ltd_files'\n",
-            "'NSE - National Stock Exchange of India Ltd.html'\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -828,11 +815,11 @@
       "metadata": {
         "id": "UfKTzPGsicBM",
         "colab_type": "code",
+        "outputId": "abdd64f1-e65d-4e22-da2c-089030239ac1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "942902da-200b-402b-c569-0bfa098a9fb6"
+        }
       },
       "source": [
         "table_cls_2 = soup.find(id=\"octable\")\n",
@@ -859,7 +846,7 @@
         "df.head()\n",
         "  "
       ],
-      "execution_count": 40,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,51 +878,51 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>10350</td>\n",
-              "      <td>150</td>\n",
-              "      <td>18150</td>\n",
+              "      <td>10150</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>10400</td>\n",
+              "      <td>10200</td>\n",
               "      <td>0</td>\n",
-              "      <td>32625</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>10450</td>\n",
+              "      <td>10250</td>\n",
               "      <td>0</td>\n",
-              "      <td>975</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>10500</td>\n",
-              "      <td>150</td>\n",
-              "      <td>105075</td>\n",
+              "      <td>10300</td>\n",
+              "      <td>0</td>\n",
+              "      <td>300</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>10550</td>\n",
-              "      <td>0</td>\n",
+              "      <td>10350</td>\n",
               "      <td>75</td>\n",
+              "      <td>23925</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   strik  calloi   putoi\n",
-              "0  10350     150   18150\n",
-              "1  10400       0   32625\n",
-              "2  10450       0     975\n",
-              "3  10500     150  105075\n",
-              "4  10550       0      75"
+              "   strik  calloi  putoi\n",
+              "0  10150       0      0\n",
+              "1  10200       0      0\n",
+              "2  10250       0      0\n",
+              "3  10300       0    300\n",
+              "4  10350      75  23925"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 5
         }
       ]
     },
@@ -944,25 +931,27 @@
       "metadata": {
         "id": "gfSMHXeki1UT",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 55
-        },
-        "outputId": "c5a130ba-61f1-4355-844d-caee87e3d716"
+        "colab": {}
       },
       "source": [
-        "print(calloi_list)"
+        "df.to_excel('output.xlsx')"
       ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[150, 0, 0, 150, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2700, 0, 0, 0, 18000, 0, 1875, 375, 26850, 525, 53175, 19050, 276975, 123000, 945300, 211575, 1414275, 311700, 1693800, 410025, 3118050, 656775, 2828550, 655275, 3169875, 530775, 2387475, 305550, 1669500, 184275, 2858100, 97425, 629625, 48075, 592875, 4050, 558750, 0, 385800, 1800, 2136075, 0, 111450, 675, 101700, 0, 11550, 0, 120075, 0, 345000, 225, 106800, 3000, 5325, 3600, 9450, 63675]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pLWZBwUoHSKT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import files\n",
+        "files.download('output.xlsx')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
