--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZ0wHh5C3egdYh+kQFWc3v",
+      "authorship_tag": "ABX9TyNINQw+o8c2lwW+nQClzDGN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
       "metadata": {
         "id": "_gF3OazUhJzL",
         "colab_type": "code",
-        "outputId": "b75ed881-ed72-4dcf-f15e-1e33dd6bed01",
+        "outputId": "25b5a452-e876-4fea-9e4f-59e0d69d3799",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
@@ -52,7 +52,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +75,7 @@
         "colab": {}
       },
       "source": [
-        "!cd \"/content/drive/My Drive/Colab Notebooks/NSE_Site_Option_Chain_Page/\""
+        "!cd \"/content/drive/My Drive/Colab Notebooks/\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -91,7 +91,7 @@
         "from bs4 import BeautifulSoup\n",
         "import codecs\n",
         "import pandas as pd\n",
-        "file=\"/content/drive/My Drive/Colab Notebooks/NSE_Site_Option_Chain_Page/NSE - National Stock Exchange of India Ltd.html\""
+        "file=\"/content/drive/My Drive/Colab Notebooks/NSE - National Stock Exchange of India Ltd.html\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "UfKTzPGsicBM",
         "colab_type": "code",
-        "outputId": "abdd64f1-e65d-4e22-da2c-089030239ac1",
+        "outputId": "73bc4cd2-0ff7-4038-c459-40dd13ff013c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -166,7 +166,7 @@
         "df.head()\n",
         "  "
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,31 +200,31 @@
               "      <th>0</th>\n",
               "      <td>10150</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>14025</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>10200</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>300</td>\n",
+              "      <td>1425</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>10250</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>75</td>\n",
+              "      <td>150</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>10300</td>\n",
-              "      <td>0</td>\n",
-              "      <td>300</td>\n",
+              "      <td>2700</td>\n",
+              "      <td>4350</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>10350</td>\n",
-              "      <td>75</td>\n",
-              "      <td>23925</td>\n",
+              "      <td>41700</td>\n",
+              "      <td>19275</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -232,17 +232,17 @@
             ],
             "text/plain": [
               "   strik  calloi  putoi\n",
-              "0  10150       0      0\n",
-              "1  10200       0      0\n",
-              "2  10250       0      0\n",
-              "3  10300       0    300\n",
-              "4  10350      75  23925"
+              "0  10150       0  14025\n",
+              "1  10200     300   1425\n",
+              "2  10250      75    150\n",
+              "3  10300    2700   4350\n",
+              "4  10350   41700  19275"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
