--- a/Nifty_Prediction.ipynb
+++ b/Nifty_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Nifty Prediction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7iLpLzs9DFYUM4ST1kZPR",
+      "authorship_tag": "ABX9TyNO2mAS5Io3DKkfZ9Zg05cS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -378,9 +378,144 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HPM8di6R51T8",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Checking for Stationarity"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "RoDT87w1u3WL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 362
+        },
+        "outputId": "48f3a7f9-59d9-476d-f9cc-35a5c335ccd2"
+      },
+      "source": [
+        "sTest = StationarityTests()\n",
+        "#my_stock['daily_ret']=my_stock.close.pct_change(1)\n",
+        "sTest.ADF_Stationarity_Test(my_stock.close.dropna(), printResults = True)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "####################################Augmented Dickey-Fuller Test Results:####################################\n",
+            "ADF Test Statistic        -0.287236\n",
+            "P-Value                    0.927293\n",
+            "# Lags Used                7.000000\n",
+            "# Observations Used     2918.000000\n",
+            "Critical Value (1%)       -3.432593\n",
+            "Critical Value (5%)       -2.862531\n",
+            "Critical Value (10%)      -2.567298\n",
+            "dtype: float64\n",
+            "Is the time series stationary? False\n",
+            "####################################KPSS Test Results:####################################\n",
+            "KPSS Test Statistic                                              9.08004\n",
+            "P-Value                                                             0.01\n",
+            "# Lags Used                                                           28\n",
+            "# Observations Used    {'10%': 0.347, '5%': 0.463, '2.5%': 0.574, '1%...\n",
+            "dtype: object\n",
+            "Is the time series stationary? True\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tsa/stattools.py:1709: InterpolationWarning: p-value is smaller than the indicated p-value\n",
+            "  warn(\"p-value is smaller than the indicated p-value\", InterpolationWarning)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rixmrZR86b8Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Differencing to make the data stationary\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DYzbrwOv6Wo5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "n_diff_dataset = pd.DataFrame(data=np.diff(np.array(my_stock['close'])))\n",
+        "n_diff_dataset.columns = ['close']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qQmCCAni6adj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 362
+        },
+        "outputId": "6da2570c-3f30-49a0-a705-70b464da2462"
+      },
+      "source": [
+        "sTest.ADF_Stationarity_Test(n_diff_dataset.close.dropna(), printResults = True)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "####################################Augmented Dickey-Fuller Test Results:####################################\n",
+            "ADF Test Statistic       -21.221197\n",
+            "P-Value                    0.000000\n",
+            "# Lags Used                6.000000\n",
+            "# Observations Used     2918.000000\n",
+            "Critical Value (1%)       -3.432593\n",
+            "Critical Value (5%)       -2.862531\n",
+            "Critical Value (10%)      -2.567298\n",
+            "dtype: float64\n",
+            "Is the time series stationary? True\n",
+            "####################################KPSS Test Results:####################################\n",
+            "KPSS Test Statistic                                             0.073293\n",
+            "P-Value                                                              0.1\n",
+            "# Lags Used                                                           28\n",
+            "# Observations Used    {'10%': 0.347, '5%': 0.463, '2.5%': 0.574, '1%...\n",
+            "dtype: object\n",
+            "Is the time series stationary? False\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tsa/stattools.py:1711: InterpolationWarning: p-value is greater than the indicated p-value\n",
+            "  warn(\"p-value is greater than the indicated p-value\", InterpolationWarning)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_03Dd8e-6pF2",
         "colab_type": "code",
         "colab": {}
       },
