--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNINQw+o8c2lwW+nQClzDGN",
+      "authorship_tag": "ABX9TyNRe+XlsMILhUMRz9FlJjf2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "UfKTzPGsicBM",
         "colab_type": "code",
-        "outputId": "73bc4cd2-0ff7-4038-c459-40dd13ff013c",
+        "outputId": "220a3a12-6064-430b-8bb9-9f504147c441",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -166,7 +166,7 @@
         "df.head()\n",
         "  "
       ],
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,51 +198,307 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>10150</td>\n",
-              "      <td>0</td>\n",
-              "      <td>14025</td>\n",
+              "      <td>8100</td>\n",
+              "      <td>2700</td>\n",
+              "      <td>281925</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>10200</td>\n",
-              "      <td>300</td>\n",
-              "      <td>1425</td>\n",
+              "      <td>8150</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>10250</td>\n",
-              "      <td>75</td>\n",
-              "      <td>150</td>\n",
+              "      <td>8200</td>\n",
+              "      <td>375</td>\n",
+              "      <td>1875</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>10300</td>\n",
-              "      <td>2700</td>\n",
-              "      <td>4350</td>\n",
+              "      <td>8250</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>10350</td>\n",
-              "      <td>41700</td>\n",
-              "      <td>19275</td>\n",
+              "      <td>8300</td>\n",
+              "      <td>84450</td>\n",
+              "      <td>594000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   strik  calloi  putoi\n",
-              "0  10150       0  14025\n",
-              "1  10200     300   1425\n",
-              "2  10250      75    150\n",
-              "3  10300    2700   4350\n",
-              "4  10350   41700  19275"
+              "   strik  calloi   putoi\n",
+              "0   8100    2700  281925\n",
+              "1   8150       0       0\n",
+              "2   8200     375    1875\n",
+              "3   8250       0       0\n",
+              "4   8300   84450  594000"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8GFbme5VAiSW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['helpcall'] = df['strik'] - df.loc[0,'strik']\n",
+        "df['helpput'] = df['strik'].iloc[-1] - df['strik']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hCe-dPbQCXAz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "cc981cb8-0faa-46d7-9262-b2f04bf05911"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14700"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oi9yHKAYCBxZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "32b9bdf9-0556-4614-c329-67c94cf24a1c"
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>strik</th>\n",
+              "      <th>calloi</th>\n",
+              "      <th>putoi</th>\n",
+              "      <th>helpcall</th>\n",
+              "      <th>helpput</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>8100</td>\n",
+              "      <td>2700</td>\n",
+              "      <td>281925</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>8150</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>50</td>\n",
+              "      <td>6550</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>8200</td>\n",
+              "      <td>375</td>\n",
+              "      <td>1875</td>\n",
+              "      <td>100</td>\n",
+              "      <td>6500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>8250</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>150</td>\n",
+              "      <td>6450</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>8300</td>\n",
+              "      <td>84450</td>\n",
+              "      <td>594000</td>\n",
+              "      <td>200</td>\n",
+              "      <td>6400</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   strik  calloi   putoi  helpcall  helpput\n",
+              "0   8100    2700  281925         0     6600\n",
+              "1   8150       0       0        50     6550\n",
+              "2   8200     375    1875       100     6500\n",
+              "3   8250       0       0       150     6450\n",
+              "4   8300   84450  594000       200     6400"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5cWcc0ypCGx-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "964dfc3e-6026-4ebb-e49e-1ac6ebebf39d"
+      },
+      "source": [
+        "df.tail()"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>strik</th>\n",
+              "      <th>calloi</th>\n",
+              "      <th>putoi</th>\n",
+              "      <th>helpcall</th>\n",
+              "      <th>helpput</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>120</th>\n",
+              "      <td>14300</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6200</td>\n",
+              "      <td>400</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>121</th>\n",
+              "      <td>14400</td>\n",
+              "      <td>1800</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6300</td>\n",
+              "      <td>300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>122</th>\n",
+              "      <td>14500</td>\n",
+              "      <td>46650</td>\n",
+              "      <td>26100</td>\n",
+              "      <td>6400</td>\n",
+              "      <td>200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>123</th>\n",
+              "      <td>14600</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6500</td>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>124</th>\n",
+              "      <td>14700</td>\n",
+              "      <td>11700</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6600</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     strik  calloi  putoi  helpcall  helpput\n",
+              "120  14300       0      0      6200      400\n",
+              "121  14400    1800      0      6300      300\n",
+              "122  14500   46650  26100      6400      200\n",
+              "123  14600       0      0      6500      100\n",
+              "124  14700   11700      0      6600        0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
         }
       ]
     },
